--- a/SpringSampleProject/src/main/resources/templates/index.html
+++ b/SpringSampleProject/src/main/resources/templates/index.html
@@ -1,1 +1,19 @@
-Hello
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <title>Tasks</title>
+</head>
+<body>
+<h1>Tasks</h1>
+
+<form action="#" th:action="@{/addTask}" method="post">
+    <input type="text" name="task" placeholder="Enter task" required>
+    <button type="submit">Add Task</button>
+</form>
+
+<form action="#" th:action="@{/printTask}" method="post">
+    <button type="submit">Print Task</button>
+</form>
+
+</body>
+</html>
