--- a/SpringSampleProject/src/main/resources/templates/index.html
+++ b/SpringSampleProject/src/main/resources/templates/index.html
@@ -10,8 +10,10 @@
     <input type="text" name="task" placeholder="Enter task" required>
 
     <select name="person">
-        <option value="p1">P1</option>
-        <option value="p2">P2</option>
+        <div th:each="person : ${personList}">
+            <option th:value="${person.name}" th:text="${person.name}"></option>
+        </div>
+
     </select>
     <button type="submit">Add Task</button>
 </form>
